# ipf

./: .gitignore  FAQ.md  Makefile  QUICKSTART.md  README.md  README.pypi  go.sh  pyproject.toml  setup.excludes  setup.py  setup.sh
access-sbin/: package
docs/: 01_install.md  02_configure-common.md  03_configure-extmodules-workflow.md  04_configure-compute-workflow.md  CHANGELOG  INSTALL.md  Quickstart.md  best-practices.md  faq.md  history.md  install-from-github-FAQ.md  install-from-github.md  install-from-pip.md  install-from-rpm.md  testing.md
ipf/: build_helper.py  daemon.py
ipf/configure/: configure_workflows.py
ipf/etc/: amqp.conf.sample  cleanse.conf  common.conf.sample  configure_compute.conf.sample  configure_extmodules.conf.sample  shell.conf
ipf/etc/ipf/init.d/: init.template  ipf-WORKFLOW
ipf/etc/ipf/workflow/templates/glue2/: extmodules.json  slurm_compute.json
ipf/glue2/: installedservices.py  modules.py  openstack.py  valet.py
ipf/lib/: utils.sh
packaging-sbin/: .gitignore  README  VERSIONipf  build_ipf_rpm.sh  create_pypi.notes  package  upload  upload-all
packaging-sbin/patches/: ipf-rpm-only.patch
utils/: ipf-setup-wrapper.sh  update_uv.sh  uv_installer.sh
