[build-system]
requires = [ "setuptools >= 80", "setuptools-scm >= 8.3", ]
# build-backend = "setuptools.build_meta"
build-backend = "setuptools.build_meta:__legacy__"
# __legacy__ enables acces to function in the local package
# see also https://setuptools-git-versioning.readthedocs.io/en/stable/options/version_callback.html

[project]
name = "ipf"
dynamic = [
  "version",
  "readme",
]
description = "The Information Publishing Framework"
keywords = [
  "monitoring",
  "information",
  "gathering",
  "publishing",
  "glue2",
]
authors = [
  {name = "Eric Blau", email = "blau@globus.org"},
  {name = "Warren Smith"},
]
requires-python = ">=3.6"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "amqp >=1.4",
  "lupa",
  "python-dateutil",
]

[project.urls]
Repository = "https://github.com/access-ci-org/ipf"

# [project.scripts]
# ipf_workflow = "ipf.run_workflow:main"
# ipf_configure = "ipf.configure.configure_workflows:configure"
# mk_version = "ipf.build_helper:mk_version"

# [project.entry-points."setuptools_scm.version_scheme"]
# # version = "ipf.build_helper:mk_version"
# # version = "build_helper:mk_version"
# mk_version = "ipf.build_helper:mk_version"

[tool.setuptools.dynamic]
readme = { file = [ "README.md" ] }

[tool.setuptools_scm]
version_file = "ipf/_version.py"
# version_scheme = "guess-next-dev"  # this is the default
version_scheme = "ipf.build_helper:mk_version"
# version_scheme = "build_helper:mk_version"
# version_scheme = "mk_version"
local_scheme = "no-local-version"  # local version component not allowed on pypi
